# PythonCommunicationTerminal

./: .gitignore  PythonCommunicationTerminal.py  SendReceiveEventHandler.py  SerialSession.py  requirements.txt  setup.cfg
PyTerminal/: PythonCommunicationTerminal.py
PyTerminal/Config/: SessionsConfigFileParser.py  __init__.py
PyTerminal/Config/Example/: ExampleConfigFile.json  README
PyTerminal/Events/: SendReceiveEventHandler.py  __init__.py
PyTerminal/Gui/: GuiFactory.py  SessionInputArea.py  SessionWindow.py
PyTerminal/Scripts/: ScriptInterface.py  __init__.py
PyTerminal/Sessions/: SerialSession.py  Session.py  __init__.py
