[metadata]
name = PyTerminal
version = attr:PyTerminal.__version__
description = Python Terminal program. Gives a GUI for serial / eth terminal sessions
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    pyserial >= 3.5

[options.entry_points]
console_scripts =
    pyTerminal = PyTerminal.main.py
